--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6">
                 <img src="./imgs/about.png" alt="">
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 . text">
+            <div class="col-sm-12 col-md-12 col-lg-6  text">
                 <h2 class="top">About <span> Me</span></h2>
                 <h2 class="bottom">Using Creativity to Get Clients</h2>
 
@@ -216,13 +216,14 @@
     <!-- connect -->
     <section id="contact" class="connect">
         <h2>CONNECT <span>WITH ME</span></h2>
-        <form action="">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Email">
-            <input type="text" placeholder="Phone">
-            <input type="text" placeholder="Message" class="messag">
+        <form onsubmit="sendEmail(); reset(); return false;">
+            <input type="text" id="Name" placeholder="Name" required>
+            <input type="email" id="Email" placeholder="Email" required>
+            <input type="text" id="Phone" placeholder="Phone No." required>
+            <textarea  id="message" rows="4" placeholder="How can we help you "></textarea>
+            <button type="submit ">Send</button>
         </form>
-        <button>Send</button>
+        
     </section>
     <!-- end connect -->
 
@@ -251,6 +252,25 @@
 
     <script src="./JS/bootstrap.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail(){
+            Email.send({
+    Host : "smtp.gmail.com",
+    Username : "safurepanashe17@gmail.com",
+    Password : "trifford02",
+    To : 'panashesafure5@gmail.com',
+    From : document.getElementById("email ").value ,
+    Subject : "New contact form enquiry",
+    Body : "Name: " + document.getElementById("name").value
+    + "<br> Email:" + document.getElementById("email").value
+    + "<br> Phone no:" + document.getElementById("phone").value
+    + "<br> Message:" + document.getElementById("message").value
+}).then(
+  message => alert("Message sent successfully")
+);
+        }
+    </script>
 </body>
 
 </html>
